# smart_syslog

./: CMakeLists.txt  LICENSE  README.txt
examples/cppstyle/: CMakeLists.txt  CppStyleLog.cpp  CppStyleLog.h  cppstyle.json  main.cpp
examples/cstyle/: CMakeLists.txt  cStyleLog.c  cStyleLog.h  cstyle.json  main.c
include/: SmartSyslogger.h  smart_syslog.h  smart_syslog_utils.h
src/: smart_syslog.c  smart_syslog_utils.c
